basiliq/src/serve/tests/requests/update/obj/snapshots/basiliq__serve__tests__requests__update__obj__sparse__one_fields.snap
---
source: basiliq/src/serve/tests/requests/update/obj/sparse.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": {
    "type": "public__peoples",
    "id": "[uuid]",
    "attributes": {
      "first-name": "Francis"
    }
  }
}
