basiliq/src/serve/tests/requests/update/obj/snapshots/basiliq__serve__tests__requests__update__obj__sparse__unknown_type.snap
---
source: basiliq/src/serve/tests/requests/update/obj/sparse.rs
expression: res

---
{
  "errors": {
    "id": "[error id]",
    "status": 400,
    "title": "CibouletteUnknownType",
    "detail": "The json:api type `AAAAAAAAAAAAAA` is unknown."
  }
}
